_sass/fonts.scss
/* libre-franklin-700 - latin */
@font-face {
    font-family: 'Libre Franklin';
    font-style: normal;
    font-weight: 700;
    src:local('Libre Franklin Bold'), local('LibreFranklin-Bold'),
        url('/assets/fonts/libre-franklin-v4-latin-ext_latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('/assets/fonts/libre-franklin-v4-latin-ext_latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
/* libre-baskerville-regular - latin-ext_latin */
@font-face {
    font-family: 'Libre Baskerville';
    font-style: normal;
    font-weight: 400;
    src:local('Libre Baskerville'), local('LibreBaskerville-Regular'),
        url('/assets/fonts/libre-baskerville-v7-latin-ext_latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('/assets/fonts/libre-baskerville-v7-latin-ext_latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}

/* libre-baskerville-700 - latin-ext_latin */
@font-face {
    font-family: 'Libre Baskerville';
    font-style: normal;
    font-weight: 700;
    src:local('Libre Baskerville Bold'), local('LibreBaskerville-Bold'),
        url('/assets/fonts/libre-baskerville-v7-latin-ext_latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('/assets/fonts/libre-baskerville-v7-latin-ext_latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}

